# fuel-dao-leptos-csr

./: .gitignore  Cargo.toml  README.md  local-run.sh  redb-kv.db
csr/: Cargo.toml  build.rs  index.html  tailwind.config.js
csr/did/: backend.did  canister_ids.json
csr/src/: app.rs  error_template.rs  lib.rs  main.rs  routes.rs
csr/src/auth/: mod.rs
csr/src/auth/server_impl/: mod.rs
csr/src/components/: advantages.rs  auth_cans_provider.rs  base_route.rs  best_placed_for_trips.rs  car_tile.rs  checkout_page.rs  counter_btn.rs  footer.rs  get_in_touch.rs  header.rs  invest_in_car.rs  mod.rs  overlay.rs  search.rs  services.rs  stay_in_the_know.rs
csr/src/consts/: mod.rs  remote.rs
csr/src/pages/: app.rs  home.rs  user.rs
csr/src/state/: canisters.rs  checkout_state.rs  mod.rs
csr/src/utils/: input.rs  mod.rs  parent_resource.rs  time.rs
